# neuro-symbolic-reasoner

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
bot/: handlers.py  main.py
doc/: vision.,d
llm/: client.py  resolver.py  system_prompts.txt
llm/prompts/: explainer.txt  formalizer.txt  resolver.txt
tests/: test_bot.py
